# fastapi-architecture-lab

./: .gitignore  .openapi-generator-ignore  main.py  pyproject.toml
.github/: copilot-instructions.md
.github/agents/: python-test-agent.agent.md
.github/prompts/: implement-plan.prompt.md
.github/skills/dishka/: SKILL.md
.github/skills/dishka/references/: architecture.md  integration.md  testing.md
.github/skills/implement-plan/: SKILL.md
docs/: openapi.yaml
src/: main.py
src/core/adapters/: __init__.py
src/core/adapters/inbound/: favorites_router.py
src/core/adapters/outbound/: __init__.py  csv_favorite_repository.py  di.py
src/core/application/: __init__.py  di.py  exceptions.py
src/core/application/ports/: __init__.py
src/core/application/usecases/: __init__.py  add_favorite.py  get_favorite.py  list_favorites.py  search_book_candidates.py
src/core/domain/: __init__.py  exceptions.py  favorite.py
src/core/domain/entities/: __init__.py  book_candidate.py
src/core/domain/value_objects/: __init__.py  book_metadata.py  open_library_key.py
src/core/shared/: __init__.py  dependencies.py  exceptions.py  http_client.py  logger.py  logging.py  settings.py
tests/unit/: README.md
tests/unit/core/adapters/: __init__.py
tests/unit/core/application/: README.md  __init__.py  test_di.py  test_exceptions.py
tests/unit/core/domain/: README.md  __init__.py  test_favorite.py
tests/unit/core/shared/: README.md  test_dependencies.py  test_exceptions.py  test_http_client.py  test_logger.py  test_logging.py  test_settings.py
(+28 files in other folders)
